# iplus

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: SIGNING.md  iplus_seed_routing.sql
engine/: build.sh  requirements.txt  run.py
engine/app/: __init__.py  brief.py  catalog.py  connectors.py  db.py  main.py  router.py
engine/tests/: test_api.py  test_brief.py  test_catalog.py  test_router.py  test_scb.py  test_summary.py
frontend/: package-lock.json  package.json
frontend/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: engine_sidecar.rs  lib.rs
scripts/: sign-windows.ps1
